HPIPM ChangeLog



====================================================================
Version 0.1.1-master
22-Aug-2019

common:
	* change license to BSD-2

dense_qp:
	* general renaming of routines, e.g. d_create_dense_qp_dim => d_dense_qp_dim_create

ocp_qp:
	* general renaming of routines, e.g. d_create_ocp_qp_dim => d_ocp_qp_dim_create
	* add codegen functionality to export dims, qp and ipm_args as global variables in a C source file
	* add functionality to compute predicted solution for a new RHS and sensitivity of solution

cond:
	* general renaming of routines, e.g. d_create_cond_ocp2ocp => d_part_cond_qp_ws_create

Matlab/Octave interface:
	* reimplement an unified Matlab & Octave interface based on mex (and independent of the python interface)
	* allow for codegen of dims, qp and ipm_args from Matlab/Octave

python interface:
	* allow for codegen of dims, qp and ipm_args from python

====================================================================
Version 0.1.0
04-Jul-2019

common:
	* initial release