@@ -32,47 +32,132 @@
 % Author: Gianluca Frison, gianluca.frison (at) imtek.uni-freiburg.de                             %
 %                                                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-classdef hpipm_ocp_qp_solver_arg < handle
-	
-	properties
-		C_dim
-		C_arg
-	end
 
-	methods
+clear all
+close all
+clc
 
-		function obj = hpipm_ocp_qp_solver_arg(dim, in)
-			obj.C_dim = dim.C_dim;
-			% create struct in C
-			if ( strcmp(in, 'speed_abs') || strcmp(in, 'speed') || strcmp(in, 'balance') || strcmp(in, 'robust') )
-				% create empty arg with dimension dim
-				mode = in;
-				obj.C_arg = ocp_qp_solver_arg_create(obj.C_dim, mode);
-			else
-				file = in;
-				compile_mex_one_from_script('ocp_qp_solver_arg_load.c', [' -DQP_DATA_H=', file]);
-				obj.C_arg = ocp_qp_solver_arg_load(obj.C_dim, file);
-			end
-		end
 
-		function set(obj, field, value)
-			ocp_qp_solver_arg_set(obj.C_arg, field, value);
-		end
 
-%		function print_C_struct(obj)
-%			ocp_qp_print(obj.C_dim, obj.C_qp);
-%		end
+fprintf('\nHPIPM matlab interface: example from qp_data.c\n');
 
-		function codegen(obj, file_name, mode)
-			ocp_qp_solver_arg_codegen(obj.C_dim, obj.C_arg, file_name, mode);
-		end
 
-		function delete(obj)
-			%disp('in destructor');
-			ocp_qp_solver_arg_destroy(obj.C_arg);
-		end
 
+% check that env.sh has been run
+env_run = getenv('ENV_RUN');
+if (~strcmp(env_run, 'true'))
+	disp('ERROR: env.sh has not been sourced! Before executing this example, run:');
+	disp('source env.sh');
+	return;
+end
+
+
+
+%%% dim %%%
+%dim = hpipm_ocp_qp_dim(5);
+dim = hpipm_ocp_qp_dim('qp_data.c');
+
+% print to shell
+%dim.print_C_struct();
+
+
+
+%%% qp %%%
+qp = hpipm_ocp_qp(dim, 'qp_data.c');
+
+% print to shell
+%qp.print_C_struct();
+
+
+
+%%% sol %%%
+sol = hpipm_ocp_qp_sol(dim);
+
+
+
+%%% solver arg %%%
+arg = hpipm_ocp_qp_solver_arg(dim, 'qp_data.c');
+
+
+
+%%% solver %%%
+solver = hpipm_ocp_qp_solver(dim, arg);
+
+% arg which are allowed to be changed
+solver.set('iter_max', 30);
+arg.set('tol_stat', 1e-8);
+arg.set('tol_eq', 1e-8);
+arg.set('tol_ineq', 1e-8);
+arg.set('tol_comp', 1e-8);
+
+% solve qp
+nrep = 100;
+tic
+for rep=1:nrep
+	solver.solve(qp, sol);
+end
+solve_time = toc;
+
+% get solution statistics
+fprintf('\nprint solver statistics\n');
+status = solver.get('status')
+fprintf('average solve time over %d runs: %e [s]\n', nrep, solve_time/nrep);
+time_ext = solver.get('time_ext');
+fprintf('solve time of last run (measured in mex interface): %e [s]\n', time_ext);
+iter = solver.get('iter')
+res_stat = solver.get('max_res_stat')
+res_eq = solver.get('max_res_eq')
+res_ineq = solver.get('max_res_ineq')
+res_comp = solver.get('max_res_comp')
+stat = solver.get('stat');
+fprintf('iter\talpha_aff\tmu_aff\t\tsigma\t\talpha\t\tmu\t\tres_stat\tres_eq\t\tres_ineq\tres_comp\n');
+for ii=1:iter+1
+	fprintf('%d\t%e\t%e\t%e\t%e\t%e\t%e\t%e\t%e\t%e\n', stat(ii,1), stat(ii,2), stat(ii,3), stat(ii,4), stat(ii,5), stat(ii,6), stat(ii,7), stat(ii,8), stat(ii,9), stat(ii,10));
+end
+
+
+
+% get / print solution
+% x
+%x = sol.get('x', 0, N);
+%x = reshape(x, nx, N+1);
+% u
+%u = sol.get('u', 0, N-1);
+%u = reshape(u, nu, N);
+
+%x
+%u
+
+% print to shell
+%sol.print_C_struct();
+
+
+
+if status==0
+	fprintf('\nsuccess!\n\n');
+else
+	fprintf('\nsolution failed!\n\n');
+end
+
+
+
+if is_octave()
+	% directly call destructor for octave 4.2.2 (ubuntu 18.04) + others ???
+	if strcmp(version(), '4.2.2')
+		delete(dim);
+		delete(qp);
+		delete(sol);
+		delete(arg);
+		delete(solver);
 	end
 end
+
+
+
+waitforbuttonpress;
+
+
+
+return
 
 
